Question content hints (WIP)